cabal-version:      3.0
name:               glyphster
version:            0.1.0.0
synopsis:           Glyph renderer
description:        Experimental glyph renderer in Vulkan.
bug-reports:        https://github.com/lancelet/glyphster/issues
license:            BSD-3-Clause
author:             Jonathan Merritt
maintainer:         j.s.merritt@gmail.com
copyright:          Copyright (C) Jonathan Merritt 2021
category:           Graphics
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/lancelet/glyphster.git

common base
  default-language: Haskell2010
  build-depends:    base ^>=4.14.0.0

common ghc-options
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints

executable glyphster
  import:         base, ghc-options
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:  glyphster

library
  import:          base, ghc-options
  hs-source-dirs:  src
  exposed-modules:
    Glyphster.App
    Glyphster.ComputeTest
    Glyphster.Main
    Glyphster.VulkanManager

  build-depends:
    , bytestring
    , containers
    , extra
    , JuicyPixels
    , resourcet
    , safe-exceptions
    , say
    , text
    , transformers
    , vector
    , vulkan
    , vulkan-utils
    , VulkanMemoryAllocator
